tests/snapshots/shell__bad_redirect_position.snap
---
source: tests/shell.rs
expression: stderr
---
Error: expected line break
   ╭─[bad_redirect_position:1:20]
   │
 1 │ echo hi > file.txt | cat
   │                    ┬  
   │                    ╰── expected here
───╯

